--- a/ss8_validation/thuc_hanh/ung_dung_muon_sach/src/main/resources/templates/update.html
+++ b/ss8_validation/thuc_hanh/ung_dung_muon_sach/src/main/resources/templates/update.html
@@ -15,16 +15,16 @@
                 <input type="hidden" th:field="*{id}">
 
                 <div class="mb-3">
-                    <label for="title" class="form-label">Song Name</label>
-                    <input type="text" id="title" th:field="*{title}" class="form-control" placeholder="Enter first name use">
+                    <label for="title" class="form-label">Tên Sách</label>
+                    <input type="text" id="title" th:field="*{title}" class="form-control" placeholder="Nhập tên sách">
                 </div>
                 <div class="mb-3">
-                    <label for="description" class="form-label">Artist</label>
-                    <input type="text" id="description" th:field="*{description}" class="form-control" placeholder="Enter last name use">
+                    <label for="description" class="form-label">Mô tả</label>
+                    <input type="text" id="description" th:field="*{description}" class="form-control" placeholder="Nhập mô tả">
                 </div>
                 <div class="mb-3">
-                    <label for="number" class="form-label">Genre</label>
-                    <input type="number" id="number" th:field="*{number}" class="form-control" placeholder="Enter email use">
+                    <label for="number" class="form-label">Số lượng còn</label>
+                    <input type="number" id="number" th:field="*{number}" class="form-control" placeholder="Nhập số lượng còn lại">
                 </div>
                 <button type="submit" class="btn btn-success w-100">Edit</button>
             </form>
